Fixing the arrow spacing on the homepage slider

--- a/docroot/sites/all/themes/son/sass/blocks.scss
+++ b/docroot/sites/all/themes/son/sass/blocks.scss
@@ -347,7 +347,7 @@
 
   .view {
     position: relative;
-    max-width: 630px;
+    max-width: 645px;
     width: 100%;
     height: 225px;
     overflow: hidden;
